fix misaligned border radius

--- a/src/css/components/mag.component.pcss
+++ b/src/css/components/mag.component.pcss
@@ -35,7 +35,7 @@
         min-width: 100%;
         min-height: 100%;
         overflow: hidden;
-        border-radius: 0.5rem;
+        border-radius: 0.25rem;
     }
 
     .ab-magnifier-page {
